data/collection/fixes/descriptions/scala/scala-7490
The following fails:

```scala
scala> Some(1).getOrElse(0) : Integer
<console>:8: error: type mismatch;
 found   : Any
 required: Integer
              Some(1).getOrElse(0) : Integer
                               ^
```

yet the following succeeds:

```scala
scala> { val a = Some(1).getOrElse(0); a } : Integer
res46: Integer = 1
```

I'm at a loss to explain why this is (or should be) the case, and I have also been unable to find other examples that fail in the same way.